# jannes-utility-package

./: .gitignore  LICENSE  README.md  pyproject.toml
jannes_utility_package/: __init__.py
jannes_utility_package/csvutils/: __init__.py
src/CsvUtils/: csvutils.py
tests/: test_CsvUtils.py
